--- a/d6.html
+++ b/d6.html
@@ -7,7 +7,7 @@
     <title>D6</title>
   </head>
   <body>
-    <h1>Il negozio del punk innamorato</h1>
+    <h1 id="h1">Il negozio del punk innamorato</h1>
 
     <table border="5" align="center">
       <tr>
