--- a/d6.html
+++ b/d6.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>D6</title>
+    <link rel="stylesheet" href="./d6.css" />
   </head>
   <body>
     <h1 id="h1">Il negozio del punk innamorato</h1>
@@ -29,6 +30,7 @@
           <a
             href="https://www.amazon.it/Apple-iPhone-14-Pro-128/dp/B0BDKWLP8P"
             target="_blank"
+            id="my-link"
             >Iphone 14 Pro, buy now!</a
           >
         </th>
@@ -36,6 +38,7 @@
           <a
             href="https://www.amazon.it/Novit%C3%A0-Apple-iPhone-12-128GB/dp/B08L5S3XNM/ref=sr_1_1_sspa?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2UQOAB1GWHAWN&keywords=iphone+12&qid=1675113238&sprefix=iphone+1%2Caps%2C100&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1"
             target="_blank"
+            id="second-link"
             >Iphone 12, buy now!</a
           >
         </th>
@@ -43,13 +46,16 @@
           <a
             href="https://www.amazon.it/Apple-iPhone-14-128-Mezzanotte/dp/B0BDKBLF8C/ref=sr_1_1_sspa?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1M1T17KMHHCRG&keywords=iphone+14&qid=1675113283&sprefix=iphone+1%2Caps%2C107&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1"
             target="_blank"
+            id="third-link"
             >Iphone 14, buy now!</a
           >
         </th>
         <th>
           <a
             href="https://www.amazon.it/Apple-iPhone-64GB-Rosso-Ricondizionato/dp/B082DN7RVM/ref=sr_1_5?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3MG7NCGRL2AF1&keywords=iphone+11&qid=1675113324&sprefix=iphone+1%2Caps%2C111&sr=8-5"
+            href="javascript:showImage()"
             target="_blank"
+            id="fifth-link"
             >Iphone 11, buy now!</a
           >
         </th>
@@ -57,6 +63,7 @@
           <a
             href="https://www.amazon.it/Apple-iPhone-Pro-128GB-Ricondizionato/dp/B08PCB8QCV/ref=sr_1_6?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1X2YX21AJQRBF&keywords=iphone+12+plus&qid=1675113371&sprefix=iphone+12+plus%2Caps%2C124&sr=8-6"
             target="_blank"
+            id="fourth-link"
             >Iphone 12 Plus, buy now!</a
           >
         </th>
@@ -74,6 +81,7 @@
             src="./images/IPH14-256IT--BLU_0_pr.jpeg"
             alt="punk-girl-rose"
             width="250px"
+            id="my-image"
           />
         </td>
         <td>
@@ -98,35 +106,39 @@
         <td>
           <form action="#">
             <label for="fname"></label>
-            <input type="text" />
+            <input type="text" placeholder="Lascia un commento" />
           </form>
         </td>
         <td>
           <form action="#">
             <label for="fname"></label>
-            <input type="text" />
+            <input type="text" placeholder="Lascia un commento" />
           </form>
         </td>
         <td>
           <form action="#">
             <label for="fname"></label>
-            <input type="text" />
+            <input type="text" placeholder="Lascia un commento" />
           </form>
         </td>
         <td>
           <form action="#">
             <label for="fname"></label>
-            <input type="text" />
+            <input type="text" placeholder="Lascia un commento" />
           </form>
         </td>
         <td>
           <form action="#">
             <label for="fname"></label>
-            <input type="text" />
+            <input type="text" placeholder="Lascia un commento" />
           </form>
         </td>
       </tr>
     </table>
+
+    <footer>
+      <p>Contattaci per altre informazioni!</p>
+    </footer>
 
     <script src="./d6.js"></script>
   </body>
