--- a/d6.html
+++ b/d6.html
@@ -19,7 +19,7 @@
         <th>Iphone 12 plus</th>
       </tr>
       <tr>
-        <th>€1800</th>
+        <th id="first-price">€1800</th>
         <th>€980</th>
         <th>€1200</th>
         <th>€1000</th>
